--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:hint="Informe a palavra"
             android:inputType="text"
-            android:text="pai"
+            android:text="cão"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.design.widget.TextInputLayout>
