--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,19 +34,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:hint="Informe a palavra"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/et_entrada"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Informe a palavra"
-            android:inputType="text"
-            android:text="cão"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:ems="10"
+            tools:ignore="LabelFor" />
+
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.RecyclerView
